# ASTRA-1

./: .env.example  .gitignore  PYTHON_SETUP.md  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
client/public/: index.html
client/public/css/: styles.css
client/public/js/: editor.js  file-explorer.js  loading.js  main.js  monaco-config.js  notifications.js  preview.js  theme.js
client/public/pages/editor/: index.html
client/public/pages/home/: index.html  script.js  style.css
client/public/styles/: loading.css  main.css  notifications.css
scripts/: setup-python.sh  setup_python.sh
server/: project-monitor.js  server.js
server/config/: db.js
server/middleware/: auth.js
server/models/: Project.js  User.js
server/routes/: auth.js  generate.js  projects.js  run.js
server/services/: code-runner.js  grok_service.py
