[metadata]
name = codegen-ai
version = 1.0.0
description = AI-powered code generation service
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.8
install_requires =
    google-generativeai==0.3.2
    python-dotenv==1.0.0
    pathlib==1.0.1
    requests==2.31.0

[options.packages.find]
where = .
include = server.*

[options.entry_points]
console_scripts =
    codegen = server.services.gemini:main 